--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^1.10.0",
     "framer-motion": "^12.23.5",
+    "i18next": "^25.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-dropzone": "^14.3.8"
+    "react-dropzone": "^14.3.8",
+    "react-i18next": "^15.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
